admin: interface to migrate_all

--- a/octodeco/flaskr/templates/admin/info.html
+++ b/octodeco/flaskr/templates/admin/info.html
@@ -4,4 +4,9 @@
 
 {% block content %}
     <header><h2>Admin</h2></header>
+    <ul>
+        <li><span class="fa fa-chevron-circle-right"></span>
+            <a href="{{url_for('admin.migrate_all')}}">Migrate all</a> (Pro-tip: backup first)
+        </li>
+    </ul>
 {% endblock %}
