--- a/octodeco/flaskr/templates/dive/show.html
+++ b/octodeco/flaskr/templates/dive/show.html
@@ -185,6 +185,22 @@
         toggle_elt('#modify_dive', function() {} );
     }
 
+    /*
+     * Sliders, spans in sync
+     */
+    function set_gf_text_from_sliders()
+    {
+        $('#show_gflow').text($('#ipt_gflow').val());
+        $('#show_gfhigh').text($('#ipt_gfhigh').val());
+    }
+    function set_gf_to_defaults()
+    {
+        $('#show_gflow').text({{dive.gf_low_profile}});
+        $('#ipt_gflow').val({{dive.gf_low_profile}});
+        $('#show_gfhigh').text({{dive.gf_high_profile}});
+        $('#ipt_gfhigh').val({{dive.gf_high_profile}});
+    }
+
 
     /*
      * On change of the sliders
@@ -193,9 +209,6 @@
     {
         var is_table_full_vis = $('#table_full').is(':visible');
         var is_pressure_graph_vis = $('#chart_pressure_graph').is(':visible');
-        // Update the text boxes
-        $('#show_gflow').text($('#ipt_gflow').val());
-        $('#show_gfhigh').text($('#ipt_gfhigh').val());
         // We load the diveprofile first, then the rest to benefit from caching (esp. with multiple workers present)
         spin_elt('#chart_diveprofile', true);
         spin_elt('#table_summary', true );
@@ -211,9 +224,12 @@
 
 
     /*
-     * On load
+     * On document ready
      */
-    reload_all();
+    $(function(){
+        set_gf_to_defaults();
+        reload_all();
+    });
     </script>
 
     <!--
@@ -244,31 +260,21 @@
               <option value="100" label="99"></option>
             </datalist>
             <!-- RESET -->
-            <a href="#" onclick="
-                document.getElementById('show_gfhigh').innerHTML
-                    = document.getElementById('ipt_gfhigh').value
-                    = {{dive.gf_high_profile}};
-                document.getElementById('show_gflow').innerHTML
-                    = document.getElementById('ipt_gflow').value
-                    = {{dive.gf_low_profile}};
-                reload_all();
-                return false;">[reset]</a>
+            <a href="#" onclick="set_gf_to_defaults();reload_all();return false;">[reset]</a>
             <!-- SLIDERS -->
             GF
             <label for="ipt_gflow">low</label>
-            <input type="range" min=5 max=100 step=5 value={{dive.gf_low_display}} class="slider" list="tickmarks"
+            <input type="range" min=5 max=100 step=5 class="slider" list="tickmarks"
                    id="ipt_gflow" name="gflow"
-                   onmousemove="document.getElementById('show_gflow').innerHTML=this.value;"
-                   onchange="reload_all();"/>
+                   onmousemove="set_gf_text_from_sliders();"
+                   onchange="set_gf_text_from_sliders();reload_all();"/>
             /
             <label for="ipt_gfhigh">high</label>
-            <input type="range" min=5 max=100 step=5 value={{dive.gf_high_display}} class="slider" list="tickmarks"
+            <input type="range" min=5 max=100 step=5 class="slider" list="tickmarks"
                    id="ipt_gfhigh" name="gfhigh"
-                   onmousemove="document.getElementById('show_gfhigh').innerHTML=this.value;"
-                   onchange="reload_all();"/>
-            = GF <span id="show_gflow">{{dive.gf_low_display}}</span> / <span id="show_gfhigh">{{dive.gf_high_display}}</span>
-            <img id="spinner" style="display:none" alt="spinner"
-                 src="{{ url_for('static', filename='images/spinner-51px.gif') }}">
+                   onmousemove="set_gf_text_from_sliders();"
+                   onchange="set_gf_text_from_sliders();reload_all();"/>
+            = GF <span id="show_gflow">hello</span> / <span id="show_gfhigh">world</span>
         </div>
         {% if modify_allowed %}
         <div>
