Allow changing GF by entering text

--- a/octodeco/flaskr/static/css/style-customs.css
+++ b/octodeco/flaskr/static/css/style-customs.css
@@ -201,3 +201,9 @@ div.modifydive label
     text-align: right;
 }
 
+
+input[type="text"].changeable {
+    display:inline;
+    white-space:nowrap;
+    width: 2em;
+}
