Some reordering, and making it look slightly nicer

--- a/octodeco/flaskr/templates/dive/show.html
+++ b/octodeco/flaskr/templates/dive/show.html
@@ -25,15 +25,15 @@
 
 
 {% block sidebaritems %}
-    <li><span class="fa fa-play"></span><a href="{{url_for('dive.new_show')}}">New dive..</a></li>
+    <li><span class="fa fa-plus-circle"></span><a href="{{url_for('dive.new_show')}}">New dive..</a></li>
     <li><span class="fa fa-chevron-circle-right"></span><a href="#chart_diveprofile">Dive profile</a></li>
-    <li><span class="fa fa-chevron-circle-right"></span><a href="#hdivesummary">Dive summary</a></li>
-    <li><span class="fa fa-chevron-circle-right"></span><a href="#hheatmap">Heatmap</a></li>
-    <li><span class="fa fa-chevron-circle-right"></span><a href="#hgfdeco">GF-Decotime table</a></li>
-    <li><span class="fa fa-chevron-circle-right"></span><a href="#hpressuregraph">Pressure graph</a></li>
-    <li><span class="fa fa-chevron-circle-right"></span><a href="#hfulldata">Full dive data</a></li>
+    <li><span class="fa fa-chevron-circle-right"></span><a href="#hdivesummary">Summary</a></li>
+    <li><span class="fa fa-bar-chart-o"></span><a href="#hheatmap">Heatmap</a></li>
+    <li><span class="fa fa-bar-chart-o"></span><a href="#hpressuregraph">Pressure graph</a></li>
+    <li><span class="fa fa-table"></span><a href="#hgfdeco">GFs vs Decotime</a></li>
+    <li><span class="fa fa-download"></span><a href="#hfulldata">Full dive data</a></li>
     {% if modify_allowed %}
-    <li><span class="fa fa-chevron-circle-right"></span><a href="#hmodifydive">Modify</a></li>
+    <li><span class="fa fa-gear"></span><a href="#hmodifydive">Modify</a></li>
     {% endif %}
 {% endblock %}
 
@@ -323,17 +323,19 @@
     <!--
       Dive summary
     -->
-    <h2 id="hdivesummary">Dive summary</h2>
+    <h2 id="hdivesummary">Summary</h2>
     <div id="table_summary" style="display:none;">
     </div>
     <div class="placeholder" id="table_summary_plh" style="display:block;">
         <img src="{{url_for('static',filename='images/spinner-grey-211px.gif')}}" alt="spinner">
     </div>
 
+    <h2>Graphs</h2>
+
     <!--
       Heatmap
     -->
-    <h2 id="hheatmap">Tissue heatmap<span class="viztoggle" id="heatmap_toggle" onclick="toggle_div_heatmap()">[show]</span></h2>
+    <h3 id="hheatmap">Tissue heatmap<span class="viztoggle" id="heatmap_toggle" onclick="toggle_div_heatmap()">[show]</span></h3>
 
     <div id="heatmap" style="display: none">
         <p>Displays (scaled) compartment pressure (actually: GF99)</p>
@@ -344,25 +346,11 @@
         </div>
     </div>
 
-
-    <!--
-      GF-Decotime-Table
-    -->
-    <h2 id="hgfdeco">GFs vs Decotime<span class="viztoggle" id="table_gfdeco_toggle"
-                                          onclick="toggle_div_table_gfdeco()">[show]</span></h2>
-
-    <div id="table_gfdeco" style="display: none">
-    </div>
-    <div id="table_gfdeco_plh" class="placeholder" style="display: none">
-        <img src="{{url_for('static',filename='images/spinner-grey-211px.gif')}}" alt="spinner">
-    </div>
-
-
     <!--
       Pressure graph
     -->
-    <h2 id="hpressuregraph">Pressure graph<span class="viztoggle" id="pressure_graph_toggle"
-                                                onclick="toggle_div_pressure_graph()">[show]</span></h2>
+    <h3 id="hpressuregraph">Pressure graph<span class="viztoggle" id="pressure_graph_toggle"
+                                                onclick="toggle_div_pressure_graph()">[show]</span></h3>
 
     <div id="pressure_graph" style="display: none">
         <div class="chart" id="chart_pressure_graph" style="display:none;">
@@ -372,14 +360,27 @@
         </div>
     </div>
 
+    <h2>Data</h2>
+
+    <!--
+      GF-Decotime-Table
+    -->
+    <h3 id="hgfdeco">GFs vs Decotime<span class="viztoggle" id="table_gfdeco_toggle"
+                                          onclick="toggle_div_table_gfdeco()">[show]</span></h3>
+
+    <div id="table_gfdeco" style="display: none">
+    </div>
+    <div id="table_gfdeco_plh" class="placeholder" style="display: none">
+        <img src="{{url_for('static',filename='images/spinner-grey-211px.gif')}}" alt="spinner">
+    </div>
 
     <!--
       Full data table
     -->
-    <h2 id="hfulldata">Full dive data
+    <h3 id="hfulldata">Full dive data
         <span class="viztoggle" id="table_full_toggle" onclick="toggle_div_table_full()">[show]</span>
         <span class="viztoggle"><a href="{{url_for('dive.csv',dive_id=dive.dive_id)}}">[csv]</a></span>
-    </h2>
+    </h3>
     <div id="table_full" class="bigtable" style="display: none">
     </div>
     <div id="table_full_plh" class="bigtable placeholder" style="display: none">
@@ -395,6 +396,7 @@
     <span class="viztoggle" id="modify_dive_toggle" onclick="toggle_div_modify_dive()">[show]</span>
     </h2>
     <div id="modify_dive" class="modifydive" style="display:none">
+    <h3>Change</h3>
     <form method="post" action="{{url_for('dive.modify',dive_id=dive.dive_id)}}">
         <label for="ipt_surface_section">Add surface section to end of dive:</label>
         <input type="text" value="{{dive.length_of_surface_section()}}" name="ipt_surface_section" id="ipt_surface_section">
@@ -408,6 +410,7 @@
         <label for="action_update"></label>
         <input type="submit" name="action_update" id="action_update" value="Update">
     </form>
+    <h3>Delete</h3>
     <form method="post" action="{{url_for('dive.delete',dive_id=dive.dive_id)}}">
         <label for="subm_delete">Delete:</label>
         <input type="submit" name="action_delete" id="subm_delete" value="Delete this dive" onclick="return confirm('Sure?');">
