--- a/octodeco/flaskr/templates/base.html
+++ b/octodeco/flaskr/templates/base.html
@@ -142,7 +142,11 @@
 			<!-- Copyright -->
 			<div id="copyright">
 				<div class="container">
-					<p>Octo-Deco is <a href="https://github.com/danroozemond/octo-deco" target="_blank">open source</a> (LPGLv3).</p>
+					<p>
+						Octo-Deco is <a href="https://github.com/danroozemond/octo-deco" target="_blank">open source</a> (LPGLv3).
+						I'm serving you <a href="https://github.com/danroozemond/octo-deco/commit/{{g.current_git_commit}}" target="_blank">{{g.current_git_commit[:10]}}</a>
+						(on <a href="https://github.com/danroozemond/octo-deco/tree/{{g.current_git_branch}}" target="_blank">{{g.current_git_branch}}</a>).
+					</p>
 					<p>Site design: Synchronous by <a href="http://templated.co">TEMPLATED</a>
 						&nbsp;|&nbsp; Banner by <a href="https://unsplash.com/@simebasioli?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Sime Basioli</a> from <a href="https://unsplash.com/">Unsplash</a>
 						&nbsp;|&nbsp; Favicon by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a>
