Fallback javascript files (to help be usable locally w/o internet connection)

--- a/octodeco/flaskr/templates/dive/show.html
+++ b/octodeco/flaskr/templates/dive/show.html
@@ -3,6 +3,8 @@
 {% block extrascripts %}
         <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+        <script>window.Plotly || document.write('<script src="{{ url_for('static', filename='js/fallback/plotly-latest.min.js') }}"><\/script>');</script>
+        <script>window.d3 || document.write('<script src="{{ url_for('static', filename='js/fallback/d3.min.js') }}"><\/script>');</script>
 {% endblock %}
 
 {% block title %}{{dive.description()}}{% endblock %}
