Small style fix

--- a/octodeco/flaskr/static/css/style-customs.css
+++ b/octodeco/flaskr/static/css/style-customs.css
@@ -46,6 +46,7 @@ div.flash div.close a {
 #content h3 {
     margin-bottom: 0.5em;
     margin-left: 1em;
+    margin-top: 1em;
     font-size:1.5em;
     font-weight:bold;
 }
