--- a/octodeco/flaskr/templates/dive/show.html
+++ b/octodeco/flaskr/templates/dive/show.html
@@ -424,6 +424,12 @@
         <label for="ipt_last_stop_depth">Last stop depth:</label>
         <input type="text" value="{{dive._last_stop_depth}}" name="ipt_last_stop_depth" id="ipt_last_stop_depth">
         <br/>
+        <label for="ipt_gas_consmp_bottom">Gas consumption (bottom, L/min):</label>
+        <input type="text" value="{{dive._gas_consmp_bottom}}" name="ipt_gas_consmp_bottom" id="ipt_gas_consmp_bottom">
+        <br/>
+        <label for="ipt_gas_consmp_deco">Gas consumption (deco, L/min):</label>
+        <input type="text" value="{{dive._gas_consmp_deco}}" name="ipt_gas_consmp_deco" id="ipt_gas_consmp_deco">
+        <br/>
         <label for="action_update_settings"></label>
         <input type="submit" name="action_update_settings" id="action_update_settings" value="Update">
     </form>
