--- a/octodeco/flaskr/templates/dive/show.html
+++ b/octodeco/flaskr/templates/dive/show.html
@@ -14,7 +14,7 @@
         <form method="get" action="{{url_for('dive.show_get')}}">
         <label for="dives" style="display:none">Display:</label>
         <select id="dives" name="dive_id" onchange="this.form.submit()">
-            <option disabled>{{dive.description()}}</option>
+            <option disabled selected>{{dive.description()}}</option>
             <option style="font-size: 1pt; background-color: #000000;" disabled>&nbsp;</option>
             {% for x in alldives %}
               <option value="{{x['dive_id']}}"{%
