UI & logic for turning an ephemeral dive into something permanent

--- a/octodeco/flaskr/templates/dive/show.html
+++ b/octodeco/flaskr/templates/dive/show.html
@@ -298,6 +298,23 @@
     </div>
 
     <!--
+      Ephemeral dive profile options
+    -->
+    {% if dive.is_ephemeral %}
+    <div class="adjust">
+        This dive will expire automatically in a couple of hours.
+        {% if dive['parent_dive_id'] %}
+        <form style="display:inline" method="GET" action="{{url_for('dive.show', dive_id=dive.parent_dive_id)}}">
+            <input type="submit" value="Go back to original"/>
+        </form>
+        {% endif %}
+        <form style="display:inline" method="POST" action="{{url_for('dive.update_keep', dive_id=dive.dive_id)}}">
+            <input type="submit" value="Keep"/>
+        </form>
+    </div>
+    {% endif %}
+
+    <!--
       GF update sliders
     -->
     <form method="post" id="form_update" action="{{url_for('dive.update', dive_id=dive.dive_id)}}">
