Add flag (in Modify dive) to remove all stops. Could come in handy for teaching purposes.

--- a/octodeco/flaskr/templates/dive/show.html
+++ b/octodeco/flaskr/templates/dive/show.html
@@ -460,6 +460,9 @@
         <label for="ipt_gas_consmp_deco">Gas consumption (deco, L/min):</label>
         <input type="text" value="{{dive._gas_consmp_deco}}" name="ipt_gas_consmp_deco" id="ipt_gas_consmp_deco">
         <br/>
+        <label for="ipt_remove_all_stops">Remove all stops:</label>
+        <input type="checkbox" name="ipt_remove_all_stops" id="ipt_remove_all_stops">
+        <br/>
         <label for="action_update_settings"></label>
         <input type="submit" name="action_update_settings" id="action_update_settings" value="Update">
     </form>
