fix typo in license

--- a/octodeco/flaskr/templates/base.html
+++ b/octodeco/flaskr/templates/base.html
@@ -144,7 +144,7 @@
 			<div id="copyright">
 				<div class="container">
 					<p>
-						Octo-Deco is <a href="https://github.com/danroozemond/octo-deco" target="_blank">open source</a> (LPGLv3).
+						Octo-Deco is <a href="https://github.com/danroozemond/octo-deco" target="_blank">open source</a> (LGPLv3).
 						I'm serving you <a href="https://github.com/danroozemond/octo-deco/commit/{{g.current_git_commit}}" target="_blank">{{g.current_git_commit[:10]}}</a>
 						(on <a href="https://github.com/danroozemond/octo-deco/tree/{{g.current_git_branch}}" target="_blank">{{g.current_git_branch}}</a>).
 					</p>
