--- a/config/docker-flask/scripts/flask_settings.sh.tmpl
+++ b/config/docker-flask/scripts/flask_settings.sh.tmpl
@@ -1,7 +1,9 @@
 #!/bin/sh
-# Copy this file to flask_info.sh and set FLASK_SECRET_KEY
-export FLASK_APP=octodeco/flaskr
-export FLASK_INSTANCE_PATH=/flask_instance
-export FLASK_SECRET_KEY=abcd
-export GOOGLE_OAUTH_JSON=/scripts/client_secret.json
-export FLASK_CACHE_DIR=/tmp
+# Copy this file to flask_settings.sh and set FLASK_SECRET_KEY
+set FLASK_APP=octodeco/flaskr
+set FLASK_ENV=development
+set FLASK_SECRET_KEY=dev
+set FLASK_CACHE_DIR=cache
+set FLASK_CACHE_THRESHOLD=1000
+set FLASK_PORT=5000 #Also in uwsgi.ini
+set FLASK_DB_ENDPOINT=http://fastapi_db:8001/
