--- a/config/docker-flask/scripts/flask_settings.sh.tmpl
+++ b/config/docker-flask/scripts/flask_settings.sh.tmpl
@@ -1,9 +1,9 @@
 #!/bin/sh
 # Copy this file to flask_settings.sh and set FLASK_SECRET_KEY
-set FLASK_APP=octodeco/flaskr
-set FLASK_ENV=development
-set FLASK_SECRET_KEY=dev
-set FLASK_CACHE_DIR=cache
-set FLASK_CACHE_THRESHOLD=1000
-set FLASK_PORT=5000 #Also in uwsgi.ini
-set FLASK_DB_ENDPOINT=http://fastapi_db:8001/
+export FLASK_APP=octodeco/flaskr
+export FLASK_ENV=development
+export FLASK_SECRET_KEY=dev
+export FLASK_CACHE_DIR=cache
+export FLASK_CACHE_THRESHOLD=1000
+export FLASK_PORT=5000 #Also in uwsgi.ini
+export FLASK_DB_ENDPOINT=http://fastapi_db:8001/
