update dive loading logic to fail more gracefully (not a 404/403) if loading a dive fails

--- a/octodeco/flaskr/templates/base.html
+++ b/octodeco/flaskr/templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Octo-Deco - {% block title %}{% endblock %}</title>
+		<title>Octo-Deco Dive Planning - {% block title %}{% endblock %}</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
