--- a/octodeco/flaskr/templates/user/info.html
+++ b/octodeco/flaskr/templates/user/info.html
@@ -22,7 +22,7 @@
         {% for row in diveinfos %}
         <li>
             <a href="{{url_for('dive.show', dive_id=row['dive_id'])}}">{{ row['dive_desc'] }}</a>
-            {% if row['is_public'] %}(Public){% endif %}
+            {% if row['is_public'] %}(Shareable){% endif %}
         </li>
         {% endfor %}
     </ul>
