--- a/config/docker-flask/scripts/fastapi_settings.sh.tmpl
+++ b/config/docker-flask/scripts/fastapi_settings.sh.tmpl
@@ -1,5 +1,5 @@
 #!/bin/sh
 # Copy this file to fastapi_settings.sh and adjust accordingly.
-export DB_APPNAME=octodeco.db.simple.app:app
+export DB_APPNAME=simple.app:app
 export DB_PORT=8001
 export DB_SQLITE=/flask_instance/flaskr.sqlite
