cleanup wrt dive count

--- a/octodeco/flaskr/templates/user/info.html
+++ b/octodeco/flaskr/templates/user/info.html
@@ -17,7 +17,7 @@
         {% endfor %}
     </ul>
 
-    <h2>Dives</h2>
+    <h2>Dives ({{diveinfos|length}})</h2>
     <ul style="list-style-type: disc;">
         {% for row in diveinfos %}
         <li>
